ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
   cert-manager.io/cluster-issuer: "letsencrypt-issuer"
spec:
  tls:
  - hosts:
    - example.com
    secretName: example-tls-secret 
  rules:
  - host: penguin.com	
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: example-service
              port: 
                name: http
